Fix alignment issues

--- a/frontend/src/components/requester/new_request/choose_address.module.css
+++ b/frontend/src/components/requester/new_request/choose_address.module.css
@@ -1,97 +1,33 @@
-.chooseAddressPage {
-  height: 100%;
-  text-align: center;
-}
-
-.pageTitle {
+.form {
   display: grid;
-  margin: 0px auto;
+  justify-items: center;
+  
 }
 
-.headerText {
-  margin: 2em auto;
-  font-weight: 800;
-  font-size: 1.1rem;
-}
-
-.addressForm {
+.inputs {
   display: grid;
-  justify-content: center;
   justify-items: center;
+  width: min(90%,var(--max-width));
+  gap: 16px;
+  grid-template-areas: 'address address'
+  'city area'
+  ;
+  margin-bottom: 50px;
 }
-
-.addressContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-items: center;
-
-  padding: 2px;
-}
-
-.cityPincode {
-  margin: 1rem auto;
-  padding: 0px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  justify-items: center;
-  width: 500px;
-}
-
-.headField {
-  padding: 3px;
-  min-width: 495px;
-  min-height: 150px;
-  font-size: 1em;
-  border-radius: 4px;
+.inputs > div:nth-child(1){
+  grid-area: address;
 }
 
 .locationBtn {
   padding: 0.5em 1em;
   font-weight: bold;
-  outline: none;
   border: 0.8px solid lightpink;
   color: black;
-  place-self: center;
-  background-color: white;
-}
-
-.locationBtn:active {
-  outline: none;
-}
-
-#locationIcon {
-  justify-self: center;
-  margin: auto;
-  margin-left: 8px;
+  background: white;
 }
 
 .btnProceed {
-  margin-top: 4em;
-  padding: 0.6em;
-  font-weight: bold;
-  color: white;
-  background-color: green;
-  font-size: 1em;
-  display: block;
-  width: 100%;
-  border: none;
-}
+  padding: 0.65em 1em;
+  width: min(250px, 30%);
 
-@media screen and (max-width: 480px) {
-  .cityPincode {
-    width: 80%;
-  }
-  .headField {
-    min-width: 100%;
-  }
-  .textAreaContainer {
-    margin: auto 10%;
-  }
-  .btnProceed {
-    width: 80%;
-    margin-top: 8rem;
-  }
 }
