--- a/frontend/src/components/requester/new_request/enter_items_form/requestItem.module.css
+++ b/frontend/src/components/requester/new_request/enter_items_form/requestItem.module.css
@@ -18,7 +18,6 @@
 }
 .checkBoxArea input[type="checkbox"] {
   width: 16px;
-
   height: 16px;
 }
 .inputArea {
@@ -26,7 +25,9 @@
   display: grid;
   margin-bottom: 2rem;
   gap: 16px;
+  grid-auto-columns: min(90%,var(--max-width));
   justify-items: center;
+  justify-content: center;
 }
 
 .inputArea button {
@@ -35,10 +36,11 @@
 }
 
 .card {
-  display: flex;
+  display: grid;
+  grid-template-columns: 5fr 1fr;
   font-size: clamp(1rem, 2.2vw, 1.2rem);
   justify-content: space-between;
-  width: min(90%, 500px);
+  width: 100%;
   background-color: rgba(151, 209, 247, 0.356);
   box-shadow: 0px 0px 10px 2px rgba(37, 6, 6, 0.15),
     0px 0px 5px 1px rgba(31, 26, 26, 0.08), 0px 0px 3px rgba(0, 0, 0, 0.05);
